2006-09-01  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainercombobox.c: implement set_context() and
	set the view renderers' contexts.

	(gimp_container_combo_box_insert_item): unselect after inserting
	the first item, GimpContainerView doesn't select items by itself.

	* app/dialogs/image-new-dialog.c: create a local context for the
	combo box, connect to the context's "template-changed" signal
	instead of the combo boxed's "select-item", fix some stuff and
	don't leak the local GimpTemplate.

2006-09-01  Sven Neumann  <sven@gimp.org>

	* app/core/gimpgradient.c: disallow NULL context and removed code
	that used to deal with this case.

2006-09-01  Simon Budig  <simon@gimp.org>

	* tools/pdbgen/pdb/gradient.pdb: minor documentation fix

	* app/pdb/gradient_cmds.c
	* libgimp/gimpgradient_pdb.c: regenerated

2006-09-01  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.[ch]: use a hash table instead of object
	data to maintain context ids. Saves lots of pointless string copies.

2006-09-01  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpviewabledialog.[ch]: added GimpContext
	parameters and create the GimpView with that context.

	* app/widgets/gimpcolordialog.[ch]
	* app/dialogs/convert-dialog.[ch]
	* app/dialogs/desaturate-dialog.[ch]
	* app/dialogs/grid-dialog.[ch]
	* app/dialogs/image-properties-dialog.[ch]
	* app/dialogs/layer-add-mask-dialog.[ch]
	* app/dialogs/offset-dialog.[ch]
	* app/dialogs/print-size-dialog.[ch]
	* app/dialogs/resize-dialog.[ch]
	* app/dialogs/scale-dialog.[ch]
	* app/dialogs/stroke-dialog.[ch]
	* app/dialogs/template-options-dialog.[ch]
	* app/dialogs/vectors-options-dialog.[ch]: added GimpContext
	parameters here too and pass them to gimp_viewable_dialog_new().

	* app/actions/colormap-editor-commands.c
	* app/actions/drawable-commands.c
	* app/actions/gradient-editor-commands.c
	* app/actions/image-commands.c
	* app/actions/layers-commands.c
	* app/actions/palette-editor-commands.c